-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17
-
Component/s: hotspot
-
b19
The comment in G1FullGCPrepareTask::G1CalculatePointersClosure is missing a crucial "not":
// Force the high live ratio region as compacting to skip these regions in the
// later compaction step.
i.e. s/compacting/not-compacting
// Force the high live ratio region as compacting to skip these regions in the
// later compaction step.
i.e. s/compacting/not-compacting
- relates to
-
JDK-8264818 G1: Improve liveness check for empty pinned regions after full gc marking
-
- Resolved
-