8265330: G1: Fix comment in G1FullGCPrepareTask::G1CalculatePointersClosure

Reviewed-by: shade, mli