src/hotspot/share/gc/g1/g1FullGCPrepareTask.cpp
@@ -63,7 +63,8 @@ bool G1FullGCPrepareTask::G1CalculatePointersClosure::do_heap_region(HeapRegion*
     } else {
       assert(MarkSweepDeadRatio > 0,
              "only skip compaction for other regions when MarkSweepDeadRatio > 0");
-      // Force the high live ratio region as compacting to skip these regions in the
+
+      // Force the high live ratio region as not-compacting to skip these regions in the
       // later compaction step.
       force_not_compacted = true;
       if (hr->is_young()) {
